[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wgpu = "0.15.1"
winit = "0.28.3"
bytemuck = { version = "1.12", features = ["derive"] }
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
anyhow = "1.0.70"
cgmath = "0.18.0"
tobj = { version = "3.2.5", features = ["async"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
